[gd_scene load_steps=11 format=3 uid="uid://y24p0e15dd3v"]

[ext_resource type="Script" uid="uid://c5itxnti7a2q3" path="res://scripts/CharacterSelection.gd" id="1_8om47"]
[ext_resource type="FontFile" uid="uid://bn750cur0q168" path="res://assets/Daydream.ttf" id="2_2v1mg"]
[ext_resource type="Shader" uid="uid://u6aedfwbe4le" path="res://scenes/SlidingBackground.gdshader" id="2_o6o0h"]
[ext_resource type="Texture2D" uid="uid://ocwrk7lwpnf0" path="res://assets/new/wallpaper2.jpeg" id="2_wallpaper"]
[ext_resource type="Texture2D" uid="uid://c1760ld4bp2fw" path="res://assets/portraits/char_male_1_normal.jpeg" id="4_5se5x"]
[ext_resource type="Texture2D" uid="uid://b27e0qa74bp18" path="res://assets/new/panel.jpeg" id="4_panel_texture"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ta0h7"]
shader = ExtResource("2_o6o0h")
shader_parameter/scroll_speed = Vector2(0.05, 0.05)

[sub_resource type="Theme" id="Theme_5se5x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o6o0h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ta0h7"]

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_8om47")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_ta0h7")
layout_mode = 2
offset_right = 1536.0
offset_bottom = 864.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_wallpaper")
expand_mode = 1
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
alignment = 1

[node name="PanelContainer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(600, 550)
layout_mode = 2
offset_left = -332.0
offset_top = -298.0
offset_right = 3003.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_panel_texture")
region_rect = Rect2(0, 0, 1024, 1024)
patch_margin_left = 256
patch_margin_top = 256
patch_margin_right = 256
patch_margin_bottom = 256
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="TurnIndicatorLabel" type="Label" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
offset_left = -332.0
offset_top = -298.0
offset_right = 335.0
offset_bottom = -188.0
theme_override_fonts/font = ExtResource("2_2v1mg")
text = "Player1, escolha o seu personagem"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer2" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(600, 550)
layout_mode = 0
offset_left = -332.0
offset_top = -186.0
offset_right = 3003.0
offset_bottom = 1704.0
scale = Vector2(0.2, 0.2)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_panel_texture")
region_rect = Rect2(0, 0, 1024, 1024)
patch_margin_left = 256
patch_margin_top = 256
patch_margin_right = 256
patch_margin_bottom = 256
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2
offset_left = -332.0
offset_top = -186.0
offset_right = 334.0
offset_bottom = 192.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_5se5x")
theme_override_constants/separation = 20
alignment = 1

[node name="CharacterPortraitPreview" type="TextureRect" parent="VBoxContainer/PanelContainer2/VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_5se5x")
expand_mode = 1

[node name="CharacterDescriptionLabel" type="Label" parent="VBoxContainer/PanelContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2v1mg")
theme_override_font_sizes/font_size = 12
text = "Character description..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxCharacterDisplay" type="HBoxContainer" parent="VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="PrevCharButton" type="Button" parent="VBoxContainer/PanelContainer2/VBoxContainer/HBoxCharacterDisplay"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2v1mg")
theme_override_styles/normal = SubResource("StyleBoxEmpty_o6o0h")
text = "<"

[node name="CharacterNameLabel" type="Label" parent="VBoxContainer/PanelContainer2/VBoxContainer/HBoxCharacterDisplay"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2v1mg")
theme_override_font_sizes/font_size = 10
text = "Character Name"
horizontal_alignment = 1

[node name="NextCharButton" type="Button" parent="VBoxContainer/PanelContainer2/VBoxContainer/HBoxCharacterDisplay"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2v1mg")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ta0h7")
text = ">"

[node name="PanelContainer3" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ConfirmButton" type="Button" parent="VBoxContainer/PanelContainer3"]
layout_mode = 2
offset_left = -140.0
offset_top = 197.0
offset_right = 141.0
offset_bottom = 307.0
theme_override_fonts/font = ExtResource("2_2v1mg")
text = "Confirmar"
